contrib/networkpolicies/centraldashboard.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: centraldashboard
  namespace: kubeflow
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - centraldashboard
  ingress:
    - from:
        - namespaceSelector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - istio-system
        - podSelector: {}
  policyTypes:
    - Ingress
