contrib/networkpolicies/minio.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: minio
  namespace: kubeflow
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - minio        # artifact storage
  ingress:
    - from:
        - namespaceSelector:
            matchExpressions:
              - key: app.kubernetes.io/part-of
                operator: In
                values:
                  - kubeflow-profile
        - podSelector: {} # allow all pods from the same namespace
  policyTypes:
    - Ingress
