contrib/networkpolicies/seldon.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: seldon
  namespace: kubeflow
spec:
  podSelector:
    matchExpressions:
      - key: control-plane
        operator: In
        values:
          - seldon-controller-manager # validating webhook
  # https://www.elastic.co/guide/en/cloud-on-k8s/1.1/k8s-webhook-network-policies.html
  # The kubernetes api server must reach the webhook
  ingress:
    - ports:
        - protocol: TCP
          port: 4443
  policyTypes:
    - Ingress
